<resources>
    <string name="app_name">Store Locator V1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit_lgn">SUBMIT</string>
    <string name="search_lgn">SEARCH</string>
    <string name="title_activity_dashboard2">Store Locator V1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">OFFERS</string>
    <string name="register_lgn">REGISTER</string>
    <string name="name_rgstr">Name..</string>
    <string name="email_rgstr">Email..</string>
    <string name="phone_num_rgstr">Phone Number..</string>
    <string name="username_rgstr">Username..</string>
    <string name="password_rgstr">Password..</string>
    <string name="title_activity_markers_map">Map</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
